chore: added allowed cors origins as an environment variable